--- a/.github/workflows/kcpp-build-release-macos86.yaml
+++ b/.github/workflows/kcpp-build-release-macos86.yaml
@@ -1,47 +1,39 @@
-name: Koboldcpp Mac x86
+name: Build macOS App
 
 on: workflow_dispatch
-env:
-  BRANCH_NAME: ${{ github.head_ref || github.ref_name }}
-  NOAVX2: 1
 
 jobs:
-  osx:
+  build:
     runs-on: macos-latest
+
     steps:
-      - name: Clone
-        id: checkout
+      - name: Checkout code
         uses: actions/checkout@v3
-        with:
-          ref: ${{ github.head_ref || github.ref_name }}
 
       - name: Set up Python
-        id: setup_python
         uses: actions/setup-python@v4
         with:
           python-version: '3.x'
 
       - name: Create virtual environment
-        id: create_venv
         run: |
           python3 -m venv venv
           source venv/bin/activate
 
-      - name: Install dependencies
-        id: install_dependencies
+      - name: Upgrade pip and install dependencies
         run: |
           source venv/bin/activate
           python3 -m pip install --upgrade pip
-          python3 -m pip install setuptools py2app customtkinter tk
+          python3 -m pip install --use-pep517 setuptools py2app customtkinter tk
 
-      - name: Build
-        id: make_build
+      - name: Build application
         run: |
           source venv/bin/activate
           python3 setup.py py2app
 
-      - name: Save artifact
+      - name: Upload artifact
         uses: actions/upload-artifact@v3
         with:
-          name: kcpp_mac_app_x86
+          name: koboldcpp-app
           path: dist/
+
